= 3.4.14
- fix filter order in AS controllers which inherit from AS controllers
- clean code

= 3.4.13
- fix parent_prefixes deprecation on rails 4.2
- set parent record on add existing
- add record_select_params_for_add_existing to allow to set params on record select browse url, so add existing records are filtered
- fix search with date and boolean columns on rails 4.2
- fix cache association for has many through
- move handle_user_settings and check_input_device filters to Actions::Core so filters are not added to ActionController::Base, see cb2fabd
- allow to use search and field_search without AJAX
- allow to remove reset button in search and field_search

= 3.4.12
- Workaround for counter_cache bug on polymorphic associations on rails4
- Improve use of CRUD actions without list action

= 3.4.11
- Fix refresh-link on main form (not subform)
- Workaround for counter_cache bug on rails4 (https://github.com/rails/rails/pull/14849)
- Support create form on nested scaffolds on through association, if through reflection association is included in create form
- Remove ruby 1.8 support
- Fix :index member route (list one item), broken on 3.4.9

= 3.4.10
- singular associations on subform are always created, in other case it's not possible to enable a checkbox without filling text fields.
- process_action_link_action checks security for crud_type and action now
- fix record for add_existing_form, so it can be used on options_for_association_conditions
- :type option for action_link not needed anymore if added with action_links.member.add, it was redundant

= 3.4.9
- update parent data when changing a column in subform of edit form, so parent has data from form as it works in new form
- use :only and :except options from resource line on as_routes and as_association_routes, so activescaffold actions can be selected
- focus first element of subform record added
- changes on destroy:
  - destroy.js.erb uses main_path_to_return to get url to reload if page empty